# Memories-AI-Hackathon

./: .env  .gitignore  ACCESSIBILITY_PERMISSIONS.md  AGENT_FIX_SUMMARY.md  AI_BEAUTIFICATION_RECOMMENDATIONS.md  AI_IMPLEMENTATION_PHASE1.md  ARCHITECTURE.md  BUG_FIXES_APPLIED.md  BUG_REPORT.md  BUG_REPORT_CORRECTIONS.md  CLAUDE.md  CLOUD_ANALYSIS_IMPLEMENTATION.md  CODE_REVIEW_SUMMARY.md  FIXES_COMPLETE_SUMMARY.md  FOCUS_DURATION_ANALYZER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LABEL_TAXONOMY_EXPLAINED.md  Memories.ai API Documentation.md  Memories.ai API Hackathon_ A Market Research and Feasibility Report.md  QUICKSTART.md  QUICK_FIX_REFERENCE.md  README.md  SETUP.md  SPECIFICATION.md  TEST_GUIDE.md  UI_IMPROVEMENTS.md  UX_IMPROVEMENTS_RECOMMENDATIONS.md  Unlocking Video Intelligence_ A Comprehensive Report on the Memories.ai API.md  VERIFIED_BUG_REPORT.md  documentation_links.md  prd.md  pyproject.toml  run_focus_guardian.sh  test_all_models.py  test_gpt5nano_final.py  test_simple_vision.py  test_vision_api.py
config/: default_config.json  label_profiles.yaml.backup.20251020_231714  label_profiles.yaml.backup.20251020_231725  label_profiles.yaml.backup.20251020_231730  schema.sql
documentation/: CLOUD_VIDEO_PERSISTENCE_UPDATE.md  Global Multi-Modal Hackathon.md  HUME_VIDEO_REQUIREMENTS.md  NOTIFICATION_SYSTEM.md  documentation_links.md
documentation/hume-expression-measurement-docs/: README.md
documentation/memories_ai_api_docs/: 00_Introduction.md  01_Getting_Started.md  02_Upload_API.md  03_Search_API.md  04_Chat_API.md  05_Transcription_API.md  06_Utils_API.md  09_Pricing_and_Rate_Limits.md
documentation/openai_vision_api_docs/: README.md
hume-expression-measurement-docs/: README.md
hume-expression-measurement-docs/api-reference/: authentication.md  batch_api.md  error_handling.md  response_format.md  websocket_api.md
hume-expression-measurement-docs/examples/: typescript_batch_example.md  websocket_streaming_example.md
hume-expression-measurement-docs/models/: emotional_language.md  emotions_reference.md  vocal_burst.md
hume-expression-measurement-docs/overview/: introduction.md  scientific_background.md
hume-expression-measurement-docs/sdks/: python_sdk.md  react_sdk.md
memories_ai_api_docs/: 04_Chat_API.md  07_Caption_API.md  08_Code_Examples.md  README.md
openai_vision_api_docs/: README.md
openai_vision_api_docs/03_api_usage/: batch_api.md  image_input.md
scripts/: migrate_add_label_profile.py  watch_logs.sh
src/focus_guardian/: __init__.py  main.py
src/focus_guardian/ai/: __init__.py  (+4 more)
src/memories_ai_app/: __init__.py
testing/: test_api_structured_outputs.py
testing/hume-ai-api-testing/: live_expression_webcam.py
testing/memories-ai-api-testing/: api_test.py
tests/: TEST_RESULTS_SUMMARY.md  __init__.py  debug_hume_response.py  run_cloud_analysis_tests.py  test_camera_selection.py  test_cloud_analysis_database.py  test_cloud_analysis_manager.py  test_cloud_analysis_models.py  test_cloud_features.py  test_components.py  test_gpt5mini.py  test_gui_interactive.md  test_memories_parsing.py  test_real_api_integration.py
(+62 files in other folders)
