[project]
name = "memories-ai-hackathon"
version = "0.1.0"
description = "Memories AI Hackathon project with video understanding and emotion detection"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "hume>=0.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memories_ai_app"]
